# original_LLM

./: .gitignore  README.md  agent.md  claude.md  data_policy.md  dialogue_labeling.md  experiments.md  pyproject.toml
docs/: network_512x8_main.html
docs/improvement_log/: 2026-05-03_naturalness.md  2026-05-04_retrain.md  2026-05-05_memory.md  2026-05-05_natural_v4.md  2026-05-05_natural_v5.md  2026-05-05_prompt_tuning.md  2026-05-06_pretrain_sft.md  README.md
scripts/: bootstrap_dialogue_labels.py  build_chat_seed_from_labels.py  build_combined_chat_seed.py  build_real_persona_chat_seed.py  build_refined_chat_seed.py  check_tokenizer_coverage.py  clean_chat_seed.py  clean_chat_seed_for_naturalness.py  download_aozora_authors.py  download_aozora_dazai.py  extract_aozora_dialogue_candidates.py  prepare_dialogue_labeling_batches.py  probe_chat_checkpoint.py  synthesize_natural_chat_seed.py  validate_dialogue_labels.py
src/: config.py  data.py  generate.py  model.py  train.py
src/original_llm/: cli.py  config.py  data.py  generate.py  language.py  memory.py  model.py
tests/: test_chat_helpers.py  test_language.py  test_memory.py  test_sentencepiece_tokenizer.py  test_train_lr_schedule.py  test_update_check.py
