[project]
name = "original-llm"
version = "0.1.4"
description = "Minimal decoder-only LLM experiments trained from scratch with PyTorch."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.4.4",
    "sentencepiece>=0.2.1",
    "torch==2.9.1",
]

[project.scripts]
original-llm = "original_llm.cli:main"
dazai-chat = "original_llm.cli:main_chat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
