[project]
name = "original-llm"
version = "0.2.3"
description = "Minimal decoder-only LLM experiments trained from scratch with PyTorch."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy>=2.4.4",
    "sentencepiece>=0.2.1",
    "torch==2.9.1",
]

[project.scripts]
dazai-chat = "original_llm.cli:main_chat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
